objects/Job_Item__c.object
<CustomObject>
    <description>Records the deliverables for each job. The job items should match the pricing sheet</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>[need to consider forex angle later]</description>
        <label>FMPro Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant_Invoice_Received__c</fullName>
        <inlineHelpText>Have you received the consultants invoice for this session</inlineHelpText>
        <label>Consultant Invoice Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Month_AUD__c</fullName>
        <formula>IF(  AND 
               (MONTH(Work_Start_Date__c) =MONTH(TODAY()) ,
               YEAR (Work_Start_Date__c) = YEAR(TODAY()) ), 
                          Item_Value_AUD__c , 
                          0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_AUD__c</fullName>
        <formula>IF (
            AND (MONTH(TODAY()) &lt;7, YEAR( Work_Start_Date__c )=YEAR(TODAY()) ) ,
                     Item_Value_AUD__c  , 
                     IF (YEAR( Work_Start_Date__c )=YEAR(TODAY()) - 1 ,
                              Item_Value_AUD__c  , 
                              0 )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <description>Product Name</description>
        <label>Deliverable</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENSProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ENSProduct</label>
        <referenceTo>ENSProduct__c</referenceTo>
        <relationshipLabel>Job Items</relationshipLabel>
        <relationshipName>R00N20000001UZTxEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagement_Report_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticked means received</inlineHelpText>
        <label>Engagement Report Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Report_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticked means required</inlineHelpText>
        <label>Engagement Report Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F2F_Lookup__c</fullName>
        <formula>CASE(ENSProduct__r.Face_to_Face_Day__c
         ,&quot;YES&quot;,&quot;YES&quot;
         ,&quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F2F Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Face_to_Face_Day__c</fullName>
        <defaultValue>&quot;NO&quot;</defaultValue>
        <description>From ENS Product. To be inserted by Workflow Action.</description>
        <label>Face to Face Day</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_per_session__c</fullName>
        <formula>Quantity__c *7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours per session</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Value_AUD__c</fullName>
        <formula>Item_Value_FX__c  /  Job_Billing_X_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Value AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Value_FX__c</fullName>
        <formula>Price_FX__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Value FX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JI_C_YTD_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI C_YTD AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_F_YTD_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI F_YTD AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_Last_Cyear_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI Last_Cyear AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_Last_Fyear_AUD_S__c</fullName>
        <formula>IF (
            AND (MONTH(TODAY()) &lt;7, YEAR( Work_Start_Date__c )=YEAR(TODAY()) -1 ) ,
                     Item_Value_AUD__c  , 
                     IF (YEAR( Work_Start_Date__c )=YEAR(TODAY()) - 2 ,
                              Item_Value_AUD__c  , 
                              0 )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI Last_Fyear AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_Last_Month_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI Last Month AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_Last_Qtr_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI Last Qtr AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_MTD_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI MTD AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_Next_Cyear_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI Next_Cyear AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_Next_Fyear_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI Next_Fyear AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_Next_Month_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI Next_Month AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_Next_Qtr_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI Next_Qtr AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_QTD_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI QTD AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_This_Cyear_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI This_Cyear AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_This_Fyear_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI This_Fyear AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_This_Month_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI This_Month AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_This_Qtr_AUD_S__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI This_Qtr AUD S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JI_YearMth_as_Number__c</fullName>
        <description>Creates text field in format YYYYMM for reporting purposes</description>
        <formula>TEXT(YEAR(  Job_Item_Revenue_Date__c )  )
       &amp; IF (MONTH(Job_Item_Revenue_Date__c ) &lt;10,&quot;0&quot;,&quot;&quot;)
       &amp; TEXT(MONTH(Job_Item_Revenue_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JI_YearMth as Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Account_Name__c</fullName>
        <formula>Job__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Billing_X_Rate__c</fullName>
        <formula>Job__r.Billing_X_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Billing X Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Class__c</fullName>
        <formula>Job__r.Job_Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Item_Days__c</fullName>
        <formula>IF( UOM__c =&quot;Days&quot;,  Quantity__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Item Days</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Item_F2F_Days__c</fullName>
        <formula>IF (F2F_Lookup__c =&quot;YES&quot;
           , Job_Item_Days__c 
           ,0
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Item F2F Days</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Item_Fixed_Presenter_Fee_AUD__c</fullName>
        <formula>IF( $RecordType.Name =&quot;Fixed_Fee&quot;, Item_Value_AUD__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Item Fixed Presenter Fee AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Item_Material_AUD__c</fullName>
        <formula>IF( $RecordType.Name =&quot;Material&quot;,  Item_Value_AUD__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Item Material AUD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Item_Month__c</fullName>
        <formula>MONTH(Job_Item_Revenue_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Item Month as number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Item_Month_as_text__c</fullName>
        <formula>CASE(Job_Item_Month__c,
1,&quot;January&quot;,
2,&quot;February&quot;,
3,&quot;March&quot;,
4,&quot;April&quot;,
5,&quot;May&quot;,
6,&quot;June&quot;,
7,&quot;July&quot;,
8,&quot;August&quot;,
9,&quot;September&quot;,
10,&quot;October&quot;,
11,&quot;November&quot;,
&quot;December&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Item Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Item_Revenue_Date__c</fullName>
        <description>Since there is no Work Start Date entered for Materials, we pick up [Job Start Date] from JOB for items of type Materials, and [Job Item Work Start Date] for Service.</description>
        <formula>IF( $RecordType.Name &lt;&gt;&quot;Material&quot;,  Work_Start_Date__c ,  Job_Work_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Item Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Item_Service_AUD__c</fullName>
        <description>Value of AUD Job Item for Service types only</description>
        <formula>IF( $RecordType.Name =&quot;Service&quot;,  Item_Value_AUD__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Item Service AUD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Item_Travel_AUD__c</fullName>
        <formula>IF($RecordType.Name =&quot;Travel Time&quot;, Item_Value_AUD__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Item Travel AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Role</label>
        <referenceTo>Job_Role__c</referenceTo>
        <relationshipLabel>Job Items</relationshipLabel>
        <relationshipName>JobItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Start_Date__c</fullName>
        <formula>Job__r.Job_First_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <formula>CASE(Job__r.Status__c
          , &quot;Confirmed&quot;, &quot;Confirmed&quot;
          , &quot;Completed&quot; , &quot;Completed&quot;
          , &quot;OTHER&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <formula>CASE (Job__r.Job_Type__c
            ,&quot;Consulting&quot;,&quot;Consulting&quot;
            ,&quot;Retainer&quot;,&quot;Consulting&quot;
            ,&quot;Training&quot;,&quot;Training&quot;
            ,&quot;OTHER&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Work_Start_Date__c</fullName>
        <formula>Job__r.Job_First_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>the first day of a job</inlineHelpText>
        <label>Job Work Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Items</relationshipLabel>
        <relationshipName>JobItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Year_AUD__c</fullName>
        <formula>IF (
            AND (MONTH(TODAY()) &lt;7, YEAR( Work_Start_Date__c )=YEAR(TODAY()) -1 ) ,
                     Item_Value_AUD__c  , 
                     IF (YEAR( Work_Start_Date__c )=YEAR(TODAY()) - 2 ,
                              Item_Value_AUD__c  , 
                              0 )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Year AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_Role_Name__c</fullName>
        <label>OLD Role Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Job_ID__c</fullName>
        <label>Old Job ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Job_Item_ID__c</fullName>
        <label>Old Job Item ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Job_Role__c</fullName>
        <label>Old Job Role</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Price__c</fullName>
        <inlineHelpText>Used for data migration only. This is the price of the material from FMPro.</inlineHelpText>
        <label>Old Price</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <formula>Job_Role__r.Contact__r.FirstName  &amp; &quot; &quot; &amp;  Job_Role__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenters__c</fullName>
        <formula>Job__r.Presenters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_AUD__c</fullName>
        <formula>IF (Job_Billing_X_Rate__c =0,0, Price_FX__c  /  Job_Billing_X_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_FX__c</fullName>
        <inlineHelpText>Service - Enter the DAILY rate
Materials - Enter ITEM Price</inlineHelpText>
        <label>Price FX</label>
        <precision>12</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Service - enter number of DAYS
Materials - enter number of ITEMS
For in house trainer jobs, add the prof fee quantity as 0</inlineHelpText>
        <label>Quantity</label>
        <precision>11</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recon_AUD_Prof_Fee__c</fullName>
        <inlineHelpText>GE 1/2/09: Migrated AUD Prof Fee.</inlineHelpText>
        <label>Recon AUD Prof Fee</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recon_Alloc_To_Percentage__c</fullName>
        <inlineHelpText>GE 1/2/09: Contains the migrated value from Alloc To Percentage from FMPro.</inlineHelpText>
        <label>Recon Alloc To Percentage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recon_FX_Prof_Fee__c</fullName>
        <inlineHelpText>GE 1/2/09: Migrated FX Prof Fee.</inlineHelpText>
        <label>Recon FX Prof Fee</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recon_Value_Share_FX__c</fullName>
        <label>Recon Value Share FX</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Aid__c</fullName>
        <formula>Item_Value_FX__c  *0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Aid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SysAd_Comments__c</fullName>
        <label>SysAd Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <inlineHelpText>expenses incurred for this session</inlineHelpText>
        <label>Total Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <formula>case(    ENSProduct__r.UOM__c,
    &quot;Days&quot;, &quot;Days&quot;,
    &quot;Hours&quot;,&quot;Hours&quot;,
   &quot;Units&quot;,&quot;Units&quot;,
   &quot;Other&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Share_AUD_Total__c</fullName>
        <formula>Value_Share_FX_Total__c  /  Job_Billing_X_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Share AUD Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Share_FX_Total__c</fullName>
        <formula>Item_Value_FX__c *  Value_Share_Pcnt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Share FX Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Share_Pcnt__c</fullName>
        <defaultValue>IF (  $RecordType.Name = &quot;Service&quot;
        ,0.35
, + IF($RecordType.Name =&quot;Fixed_Fee&quot;
,1
, + IF($RecordType.Name =&quot;Travel Time&quot;
,1
        ,0)))</defaultValue>
        <inlineHelpText>ENS ratio split</inlineHelpText>
        <label>Value Share Pcnt</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Work_Start_Date_FIN_YR__c</fullName>
        <formula>IF ( $RecordType.Name &lt;&gt;&quot;Material&quot;
     ,TEXT(YEAR( Work_Start_Date__c ) + IF (MONTH (Work_Start_Date__c )&gt;6,1,0))
     ,TEXT(YEAR( Job_Work_Start_Date__c ) + IF (MONTH (Job_Work_Start_Date__c )&gt;6,1,0))
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FIN Year based off the Job Item Work Start Date</inlineHelpText>
        <label>Work Start Date FIN YR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Start_Date_YRMTH__c</fullName>
        <formula>IF ($RecordType.Name &lt;&gt;&quot;Material&quot;
      ,TEXT(YEAR( Work_Start_Date__c ))
                &amp; IF ( MONTH( Work_Start_Date__c ) &lt;10,&quot;0&quot;,&quot;&quot;)
                &amp; TEXT(MONTH( Work_Start_Date__c ))
      ,TEXT(YEAR(  Job_Work_Start_Date__c  ))
                &amp; IF ( MONTH( Job_Work_Start_Date__c  ) &lt;10,&quot;0&quot;,&quot;&quot;)
                &amp; TEXT(MONTH( Job_Work_Start_Date__c  ))
      )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Start Date YRMTH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Start_Date__c</fullName>
        <description>[Address Michael&apos;s issue of wanting to add multiple days of work in one record. This creates no problem apart from reporting granularity]</description>
        <inlineHelpText>The date that the service was performed.</inlineHelpText>
        <label>Work Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_start_date_month__c</fullName>
        <formula>MONTH( Work_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work start date month as Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_start_date_monthastext__c</fullName>
        <formula>CASE(Job_Item_Month__c,
01, &quot;g January&quot;,
02,&quot;h February&quot;,
03,&quot;i March&quot;,
04,&quot;j April&quot;,
05,&quot;k May&quot;,
06,&quot;l June&quot;,
07,&quot;a July&quot;,
08,&quot;b August&quot;,
09,&quot;c September&quot;,
10,&quot;d October&quot;,
11,&quot;e November&quot;,
12,&quot;f December&quot;,
&quot;z error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work start date month</label>
        <type>Text</type>
    </fields>
    <label>Job Item</label>
    <nameField>
        <displayFormat>JI-{000000}</displayFormat>
        <label>Job Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Items</pluralLabel>
    <recordTypes>
        <fullName>Fixed_Fee</fullName>
        <active>true</active>
        <description>When fixed fee has been agreed for presenter, exclusive to standard splits</description>
        <label>Fixed_Fee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Material</fullName>
        <active>true</active>
        <description>Physical merchandise sold by ENS International, such as books.</description>
        <label>Material</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <description>Professional services sold by ENS International, such as consulting or training courses.</description>
        <label>Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Travel_Time</fullName>
        <active>true</active>
        <description>When travel time is 100% to consultant</description>
        <label>Travel Time</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enforce_Work_Start_Date</fullName>
        <active>false</active>
        <errorConditionFormula>ISNULL( Work_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>Work_Start_Date__c</errorDisplayField>
        <errorMessage>You must enter a Work Start Date for a Job Item</errorMessage>
    </validationRules>
</CustomObject>